--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "abp-ng2-module": "8.0.0",
     "abp-web-resources": "^5.7.0",
     "admin-lte-css-only": "^3.2.0",
+    "ajv": "^8.11.2",
     "core-js": "^3.26.1",
     "famfamfam-flags": "^1.0.0",
     "lodash-es": "^4.17.15",
