--- a/aspnet-core/src/HotSpotWeb.Migrator/appsettings.json
+++ b/aspnet-core/src/HotSpotWeb.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=False; TrustServerCertificate=True; User=sa;Password=your_password123;"
   }
 }
