--- a/aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
+++ b/aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=True; TrustServerCertificate=True;"
-    //"Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=False; TrustServerCertificate=True; User=sa; Password=your_password123;"
+    //"Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=False; TrustServerCertificate=True; User=sa; Password=your_password123;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
