added githubProfile to backend

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ cmd_results/
 # Database configuration
 aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
 aspnet-core/src/HotSpotWeb.Migrator/appsettings.json
+aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
+/aspnet-core/src/HotSpotWeb.Migrator/appsettings.json
+/aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
