--- a/aspnet-core/src/HotSpotWeb.Web.Host/HotSpotWeb.Web.Host.csproj
+++ b/aspnet-core/src/HotSpotWeb.Web.Host/HotSpotWeb.Web.Host.csproj
@@ -14,6 +14,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="wwwroot\swagger\ui\index.html" />
+    <Content Remove="appsettings.Staging.json" />
+    <Content Remove="appsettings.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
