--- a/angular/package.json
+++ b/angular/package.json
@@ -27,12 +27,13 @@
     "abp-web-resources": "^5.7.0",
     "admin-lte-css-only": "^3.2.0",
     "ajv": "^8.11.2",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.26.1",
     "famfamfam-flags": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "2.29.4",
     "moment-timezone": "0.5.40",
-    "ngx-bootstrap": "^9.0.0",
+    "ngx-bootstrap": "10.3.0",
     "ngx-pagination": "^6.0.3",
     "push.js": "1.0.12",
     "rxjs": "^7.6.0",
