--- a/aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
+++ b/aspnet-core/src/HotSpotWeb.Web.Host/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    //"Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=True; TrustServerCertificate=True;"
-    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=False; TrustServerCertificate=True; User=sa; Password=your_password123;"
+    "Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    //"Default": "Server=localhost; Database=HotSpotWebDb; Trusted_Connection=False; TrustServerCertificate=True; User=sa; Password=your_password123;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
-    "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:44311"
+    "ClientRootAddress": "http://localhost:80/",
+    "CorsOrigins": "http://localhost:4200,http://localhost:80,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:44311"
   },
   "Authentication": {
     "JwtBearer": {
